--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root {
@@ -60,7 +63,7 @@ nav ul li a {
     position: absolute;
     bottom: -5px;
     left: 0;
-    background-color: var(--text-color);
+    background-color: #f89274;
     transition: width 0.5s ease;
     height: 3px;
     width: 0%;
@@ -72,8 +75,14 @@ nav ul li a {
 
 /* ----------- END OF NAV BAR AND LOGO */
 
+/* ----------- INDEX CONTENT */
+
 .main-content {
     flex-wrap: wrap;
+}
+
+.background-container {
+    background-image: linear-gradient(to bottom, #e6e0bb, #eadcb4, #efd7af, #f4d1aa, #f9cca7, #fbc6a1, #fcbf9b, #feb896, #fdae8c, #fca482, #fa9979, #f98e71);
 }
 
 .col-left,
@@ -123,3 +132,4 @@ nav ul li a {
 .btn:hover:before {
     transform: translate(3px, 3px);
 }
+
