--- a/style.css
+++ b/style.css
@@ -64,13 +64,18 @@ nav ul li a {
     bottom: -5px;
     left: 0;
     background-color: #f89274;
-    transition: width 0.5s ease;
+    transition: width 0.3s ease;
     height: 3px;
     width: 0%;
 }
 
 .nav-item:hover::after {
     width: 100%;
+}
+
+#cart-image {
+    width: 30px;
+    height: 30px;
 }
 
 /* ----------- END OF NAV BAR AND LOGO */
@@ -133,3 +138,45 @@ nav ul li a {
     transform: translate(3px, 3px);
 }
 
+.categories-img {
+    flex-basis: 30%;
+    flex-direction: col;
+    min-width: 250px;
+    margin-bottom: 30px;
+}
+
+.categories-img img {
+    width: 100%;
+    height: 85%;
+    transition: transform 0.2s ease-out;
+}
+
+.categories-img img:hover {
+    transform: translateY(-15px);
+}
+
+.text-decoration-none p {
+    color: var(--text-color);
+}
+
+.categories-img .fw-bold {
+    letter-spacing: 3px;
+}
+
+.popular-items img {
+    width: 500px;
+    height: 500px;
+}
+
+.col-lg-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+    background-color: #000;
+}
