--- a/style.css
+++ b/style.css
@@ -8,8 +8,12 @@
 }
 
 :root {
-    --main-color :#e6e0bb;
-    --text-color : #000;
+    --main-color: #e6e0bb;
+    --text-color: #000;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 /* -------------------NAV BAR AND LOGO */
@@ -126,12 +130,12 @@ nav ul li a {
 }
 
 .btn:hover {
-    color:darkgray;
+    color: darkgray;
 }
 
 .btn:hover:after {
     transform: translate(-3px, -3px);
-  
+
 }
 
 .btn:hover:before {
@@ -180,3 +184,257 @@ nav ul li a {
 .carousel-control-prev-icon {
     background-color: #000;
 }
+
+/* TESTIMONIALS */
+
+.testimonials {
+    padding-top: 50px;
+}
+
+.testimonials-item {
+    padding: 30px 20px;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
+    transition: transform 0.5s;
+    background-color: rgba(225, 225, 225, 0.2);
+}
+
+.testimonials-item:hover {
+    transform: translateY(-15px);
+}
+
+.testimonials img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+
+/* ------------------- FOOTER */
+
+ul {
+    list-style: none
+}
+
+a {
+    text-decoration: none
+}
+  
+.generic-anchor {
+    color: #fff;
+}
+
+.generic-anchor:hover {
+    color: gray;
+}
+
+.flex-rw {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+footer {
+    background: rgb(55, 55, 55);
+    margin-top: auto;
+    width: 100%;
+}
+
+.footer-list-top {
+    width: 33.333%
+}
+
+.footer-list-top>li {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 10px;
+}
+
+.footer-list-header {
+    padding: 10px 0 5px 0;
+    color: #fff;
+    font: 16px;
+}
+
+.footer-list-anchor {
+    font: 16px;
+}
+
+.footer-social-section {
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    margin-top: 5px;
+}
+
+.footer-social-section::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 10px;
+    border-top: 1px solid black;
+    width: calc(100% - 20px);
+}
+
+.footer-social-overlap {
+    position: relative;
+    z-index: 2;
+    background: rgb(55, 55, 55);
+    padding: 0 20px;
+}
+
+.footer-social-connect {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    color: #fff
+}
+
+.footer-social-small {
+    font-size: 20px;
+    padding: 0px 20px
+}
+
+.footer-social-overlap>a {
+    font-size: 20px;
+}
+
+.footer-social-overlap>a:not(:first-child) {
+    margin-left: 0.38em;
+}
+
+.footer-bottom-section {
+    width: 100%;
+    padding: 10px;
+    border-top: 1px solid black;
+    margin-top: 10px;
+}
+
+.footer-bottom-section>div:first-child {
+    margin-right: auto
+}
+
+.footer-bottom-wrapper {
+    font-size: 16px;
+    color: #fff
+}
+
+.footer-address {
+    display: inline;
+    font-style: normal
+}
+
+@media only screen and (max-width: 768px) {
+    .footer-list-header {
+        font-size: 2em
+    }
+
+    .footer-list-anchor {
+        font-size: 1.1em
+    }
+
+    .footer-social-connect {
+        font-size: 2.5em
+    }
+
+    .footer-social-overlap>a {
+        font-size: 2.24em
+    }
+
+    .footer-bottom-wrapper {
+        font-size: 1.3em
+    }
+}
+
+@media only screen and (max-width: 568px) {
+    main {
+        font-size: 5em
+    }
+
+    .footer-list-top {
+        width: 100%
+    }
+
+    .footer-list-header {
+        font-size: 3em;
+    }
+
+    .footer-list-anchor {
+        font-size: 1.5em
+    }
+
+    .footer-social-section {
+        justify-content: center
+    }
+
+    .footer-social-section::after {
+        top: 25%
+    }
+
+    .footer-social-connect {
+        margin-bottom: 10px;
+        padding: 0 10px
+    }
+
+    .footer-social-overlap {
+        display: flex;
+        justify-content: center;
+    }
+
+    .footer-social-icons-wrapper {
+        width: 100%;
+        padding: 0
+    }
+
+    .footer-social-overlap>a:not(:first-child) {
+        margin-left: 20px;
+    }
+
+    .footer-bottom-section {
+        padding: 0 5px 10px 5px
+    }
+
+    .footer-bottom-wrapper {
+        text-align: center;
+        width: 100%;
+        margin-top: 10px
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .footer-social-overlap>a {
+        margin: auto
+    }
+
+    .footer-social-overlap>a:not(:first-child) {
+        margin-left: 0;
+    }
+
+    .footer-bottom-rights {
+        display: block
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .footer-list-header {
+        font-size: 2.2em
+    }
+
+    .footer-list-anchor {
+        font-size: 1.2em
+    }
+
+    .footer-social-connect {
+        font-size: 2.4em
+    }
+
+    .footer-social-overlap>a {
+        font-size: 2.24em
+    }
+
+    .footer-bottom-wrapper {
+        font-size: 1.3em
+    }
+}
+
+/* -------------------- END FOOTER */
