--- a/style.css
+++ b/style.css
@@ -465,6 +465,25 @@ th:last-child {
 }
 /* -------------------- END OF CART ITEM DETAILS */
 
+/* --------------------- Account LOGIN PAGE */
+
+#form-image {
+    height: 400px;
+    width: 400px;
+}
+
+.form-container {
+    background-color: #fff;
+    width: 300px;
+    height: 400px;
+    position: relative;
+    text-align: center;
+    padding: 20px 0;
+    margin: 0;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+/* --------------------- END Account LOGIN PAGE */
 
 /* -------------------- MEDIA QUERIES */
 @media only screen and (max-width: 1119.98px) {
