--- a/style.css
+++ b/style.css
@@ -481,7 +481,68 @@ th:last-child {
     padding: 20px 0;
     margin: 0;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    overflow: hidden;
 }
+
+.form-container span {
+    font-weight: bold;
+    padding: 0 10px;
+    width: 100px;
+    color: var(--text-color);
+    cursor: pointer;
+    width: 100px;
+    display: inline-block;
+}
+
+.form-btn {
+    display: inline-block
+}
+
+.form-container form {
+    max-width: 300px;
+    padding: 0 20px;
+    position: absolute;
+    top: 130px;
+    transition: transform 1s;
+} 
+
+form input {
+    width: 100%;
+    height: 20px;
+    margin: 10px 0;
+    padding: 0 10px;
+    border: 1px solid var(--secondary-color);
+}
+
+form .btn {
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    margin: 10px 0;
+}
+
+form .btn:focus {
+    outline: none;
+}
+
+#login-form {
+    left: -300px;
+}
+
+#registration-form {
+    left: 0;
+}
+
+#indicator {
+    width: 100px;
+    border: none;
+    background-color: var(--secondary-color);
+    height: 3px;
+    margin-top: 8px;
+    transform: translateX(100px);
+    transition: transform 1s;
+}
+
 
 /* --------------------- END Account LOGIN PAGE */
 
@@ -582,6 +643,25 @@ th:last-child {
         margin: 5px 10px;
     }
     
+}
+
+@media only screen and (max-width: 575.98px) {
+    #form-image {
+        width: 300px;
+        height: 300px;
+        margin: 0 auto;
+    }
+
+    .form-container {
+        margin: 0 auto;
+    }
+
+    .image-container {
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 @media only screen and (max-width: 568px) {
