--- a/style.css
+++ b/style.css
@@ -331,6 +331,52 @@ footer {
 
 
 /* -------------------- PRODUCTS PAGE */
+header{
+    width: 100%;
+    height: 100px;
+    border-bottom: 1px solid var(--text-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+header ul li{
+    list-style: none;
+    padding: 10px;
+    margin: 10px;
+    float: left;
+    font-size: 20px;
+}
+header ul li a{
+    color: var(--text-color);
+    text-decoration: none;
+}
+header ul li.active{
+    background: var(--secondary-color);
+}
+header ul li.active a{
+    color: white;
+}
+
+.product-field {
+    margin: 0 auto;
+}
+
+.product-field ul{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.product-field ul li {
+    margin-left: 40px;
+    margin-top: 20px;
+}
+
+.items img {
+    width: 200px;
+    height: 250px;
+}
 
 .on-sale {
     flex-basis: 25%;
